Fix stacking of contacts on small screens.

--- a/src/main/java/org/jboss/errai/demo/client/local/contact-page.css
+++ b/src/main/java/org/jboss/errai/demo/client/local/contact-page.css
@@ -91,8 +91,8 @@ button.new-contact {
 }
 
 .contact {
-  height: 350px;
   margin-top: 20px;
+  height: auto;
 }
 
 .contact .notes {
